# SIF

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
Contracts/: AROREX.sol  AbstractSweeper.sol  AdultXTokenFundraiser.sol  AgrelloToken.sol  AirDrop.sol  Airdrop.sol  BANK.sol  BRC.sol  BWC.sol  BitCash.sol  Bittrex_2.sol  CONI.sol  ClickGemToken.sol  Coin.sol  CpcToken.sol  CrowdSale.sol  CustomToken.sol  Diamond.sol  DropToken.sol  DutchExchangeProxy.sol  ENIGMA.sol  EOCSToken.sol  ERC20Standard.sol  ERC20Token.sol  ERC20token.sol  Etheremon_Energy.sol  FTC.sol  GCGToken.sol  HumanStandardToken.sol  IOSToken.sol  InternetNodeToken.sol  KingCuan.sol  MultiSend.sol  Multifund.sol  NewToken.sol  NlinkToken.sol  POCToken.sol  PowerLedger.sol  QTB.sol  ReplaySafeSplit.sol  (+26 more)
Tools/AST_Diff/: README.md  main.cpp
Tools/Assertion_Analyser/: ASTVisitor.cpp  README.md
Tools/CFG_Generator/: ASTVisitor.cpp  README.md
Tools/CG_Generator/: ASTVisitor.cpp  README.md
Tools/Fault_Seeder/: ASTVisitor.cpp  README.md
Tools/Function_Listing/: ASTVisitor.cpp  README.md
Tools/Sif_Rename/: ASTVisitor.cpp  README.md
doc/: Doxyfile
doc/html/: _a_s_t_analyser_8cpp.html  _a_s_t_analyser_8cpp__incl.map  _a_s_t_analyser_8cpp__incl.md5  _a_s_t_analyser_8cpp_source.html  _a_s_t_analyser_8hpp.html  (+593 more)
experimental/: package-lock.json  sif.js
libSif/: ASTAnalyser.cpp  ASTAnalyser.hpp  ASTNodes.cpp  ASTNodes.hpp  ASTVisitor.cpp  ASTVisitor.hpp  CMakeLists.txt
libUtils/: CMakeLists.txt  Constants.hpp  Utils.cpp  Utils.hpp
sif/: CMakeLists.txt  main.cpp
(+98 files in other folders)
